[package]
name = "channel-lock-scheduler-bot"
version = "0.1.0"
authors = ["plaets"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
job_scheduler = "1.1.0"
confy = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serenity = { version = "0.8", default-features = true}
chrono = "0.4.11" 
